testsuite/poke.pkl/mod-offsets-diag-1.pk
/* { dg-do compile } */

var o = 3#B % (1#Mib - 1024#Kib); /* { dg-error "" } */
